# COMP4981Lecture_Code

Domain Socket/__MACOSX/domain_socket/: ._client.c  ._server.c  ._shared.h
Domain Socket/domain_socket/: client.c  server.c  shared.h
Dynamic Libraries/: CMakeLists.txt  library_a.c  library_b.c  main.c
Dynamic Libraries/__MACOSX/: ._CMakeLists.txt  ._library_a.c  ._library_b.c  ._main.c
FIFO/: CMakeLists.txt  Notes.txt  client.c  server.c
Function Pointer/: main.c
Function Pointer/__MACOSX/: ._main.c
OOP/: main.c  person.c  person.h  student.c  student.h
OOP/__MACOSX/: ._main.c  ._person.c  ._person.h  ._student.c  ._student.h
Pipe/: CMakeLists.txt  Note.txt  main.c
Pthread/__MACOSX/: ._main.c
Redirection/: CMakeLists.txt  main.c
ReferenceAndPointers/: CMakeLists.txt  main.cpp
Semaphores/: consumer.c  producer.c  unnamed.c
Shared Memory/: consumer.c  memory.h  producer.c
Shared Memory/__MACOSX/: ._consumer.c  ._memory.h  ._producer.c
State/: main.c  state.c  state.h
State/__MACOSX/: ._main.c  ._state.c  ._state.h
Swaps/: CMakeLists.txt  main.cpp
fifo-code/: CMakeLists.txt  client.c  dc_error.c  dc_error.h  dc_fcntl.c  dc_fcntl.h  dc_sys_stat.c  dc_sys_stat.h  dc_unistd.c  dc_unistd.h  dc_verbose_error.c  dc_verbose_fcntl.c  dc_verbose_sys_stat.c  dc_verbose_unistd.c  server.c
fifo-code/__MACOSX/: ._client.c  ._dc_error.c  ._dc_error.h  ._dc_fcntl.c  ._dc_fcntl.h  ._dc_sys_stat.c  ._dc_sys_stat.h  ._dc_unistd.c  ._dc_unistd.h  ._dc_verbose_error.c  ._dc_verbose_fcntl.c  ._dc_verbose_sys_stat.c  ._dc_verbose_unistd.c  ._server.c
(+5 files in other folders)
